# pdfiron

./: .gitignore  Cargo.toml  README.md
src/: cli.yml  convert.rs  error.rs  main.rs  pdf.rs  run.rs  tesseract.rs  unpaper.rs  util.rs
