[package]
name = "pdfiron"
version = "0.1.0"
authors = ["72nd <msg@frg72.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-beta.2", features = ["yaml"]}
env_logger = "0.7.1"
log = "0.4"
num_cpus = "1.13.0"
shellexpand = "2.0.0"
tempfile = "3.1.0"
